Documentation/Grammar.txt

Program						->	Expression							| ε
Expression 					->	Declaration 		| Sequence		| Declaration Expression	| Sequence Expression
Declaration					->	StringDeclaration	| TitleDeclaration	| LifelineDeclaration
StringDeclaration			->	StringKeyword Identifier Colon String	| StringKeyword Identifier Colon Identifier
TitleDeclaration			->	TitleKeyword Identifier Colon String	| TitleKeyword Identifier Colon Identifier
LifelineDeclaration			->	LifelineKeyword Identifier Colon String	| LifelineKeyword Identifier Colon Identifier

Sequence					->	LeftSequence						| RightSequence
LeftSequence				->	Identifier LeftArrow Identifier 	| Identifier LeftArrow Identifier String
RightSequence				->	Identifier RightArrow Identifier	| Identifier RightArrow Identifier String

Identifier					->	"[_a-zA-Z][_a-zA-Z0-9]*"
String						->	"\"([^\\\"]|\\.)*\""
Colon						->	":"
RightArrow					->	"->"
LeftArrow					->	"<-"
WhiteSpace					->	"[ \t\r]+"
